--- a/package.json
+++ b/package.json
@@ -8,15 +8,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "@react-native-community/masked-view": "^0.1.0",
     "expo": "~40.0.0",
-    "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "firebase": "7.9.0",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
+    "react-native": "^0.63.2",
+    "react-native-elements": "^3.1.0",
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-gesture-handler": "^1.0.0",
+    "react-native-screens": "^2.0.0",
+    "react-native-web": "^0.14.11",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "react-native-safe-area-context": "~3.1.9"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "~7.9.6",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
