--- a/package.json
+++ b/package.json
@@ -8,28 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
-    "@react-native-community/masked-view": "^0.1.0",
     "expo": "~40.0.0",
     "firebase": "7.9.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "^0.63.2",
     "react-native-elements": "^3.1.0",
-    "react-native-vector-icons": "^7.1.0",
     "react-native-gesture-handler": "^1.0.0",
+    "react-native-paper": "^3.8.0",
+    "react-native-safe-area-context": "~3.1.9",
     "react-native-screens": "^2.0.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "^0.14.11",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "react-native-safe-area-context": "~3.1.9"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.6",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@types/react-native": "^0.62.2",
     "typescript": "~4.0.0"
   },
   "private": true
