--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "~40.0.0",
+    "expo-sqlite": "~8.5.0",
     "firebase": "7.9.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
@@ -19,6 +20,7 @@
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.0.0",
     "react-native-paper": "^3.8.0",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "~3.1.9",
     "react-native-screens": "^2.0.0",
     "react-native-vector-icons": "^7.1.0",
@@ -31,6 +33,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "^0.62.2",
+    "@types/react-native-popup-dialog": "^0.16.2",
     "typescript": "~4.0.0"
   },
   "private": true
