--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "~3.1.9",
     "react-native-screens": "^2.0.0",
+    "react-native-simple-dialogs": "^1.4.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "^0.14.11",
     "react-redux": "^7.2.2",
