--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "react-dom": "~16.13.1",
     "react-native": "^0.63.2",
     "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.0.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^3.8.0",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "~3.1.9",
-    "react-native-screens": "^2.0.0",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-simple-dialogs": "^1.4.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "^0.14.11",
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.0",
+    "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "react-native-reanimated": "~1.13.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.6",
